--- a/dashboard.css
+++ b/dashboard.css
@@ -1,30 +1,81 @@
-.grid {
+body {
     display: grid;
-    grid-template-columns: auto auto 25%;
+    grid-template-columns: auto 80%;
     
 }
 
-#mainDiv {
-    background-color: rgb(168, 202, 237);
-    border: 2px lightskyblue solid;
-    color: aliceblue;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 
-}
 
-#taskbar {
+/* left side */
+/* #taskbar {
     width: 60%;
     background-color: rgb(168, 202, 237);
     border: 2px lightskyblue solid;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 
+} */
+#mainDiv{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    height: 55%;
+    margin-top: 15%;
+    position: sticky;
+    top: 0;
+}
+
+li{
+    margin: 15px;
+}
+
+/* middle */
+#headerImage{
+    height: 300px;
+    opacity: 0.5;
+}
+
+#bioImage{
+    height: 75%;
+    width: 55%;
+}
+
+#bioSection{
+    display: grid;
+    grid-template-columns: auto auto;
+    width: 500px;   
+    height: 300px;
+    margin-left: 18%;
+    text-align: center;
+}
+
+#bioParagraph{
+    border: none;
+    text-align: justify;
+}
+
+#newMessage{
+    margin-left: 25%;
+    flex-direction: column;
+    flex-grow: 3;
+}
+
+#postcardSection{
+    width: 300px;    
+    margin-left: 25%;
+    margin-top: 3%;
+}
+
+.btn-group{
+    height: fit-content;
+}
+
+#edit-btn{
+    height: fit-content;
+    width: fit-content;
 }
 
 @media screen and (max-width: 992px) {
-    #advertising{
-        display: none;
-    }
 
     .grid{
         display: flex;
@@ -34,6 +85,9 @@
         text-align: center;
     }
 
+    .postcard{
+        align-items: center;
+    }
 
     /* #postcard div{
 flex-direction: ;    } */
@@ -43,3 +97,5 @@ flex-direction: ;    } */
     }
 
 }
+
+
