--- a/signup.css
+++ b/signup.css
@@ -21,9 +21,11 @@
 
 @media screen and (max-width: 992px) {
     .grid{
-        background-color: rgb(206, 206, 235);;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
-
     #logopic{
         display: none;
     }
